creacion del dataset FRUTAS

--- a/codigo carlota/pruebas.ipynb
+++ b/codigo carlota/pruebas.ipynb
@@ -10171,13 +10171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataFrame = pnd.DataFrame(frutas)\n",
+    "dataFrame = pd.DataFrame(frutas)\n",
     "dataFrame.to_csv(\"datas/frutas.csv\", index=False,header=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
